Adding translations for settings page names

--- a/src/main/resources/assets/sodium/lang/en_us.json
+++ b/src/main/resources/assets/sodium/lang/en_us.json
@@ -8,6 +8,9 @@
   "option_impact.high": "High",
   "option_impact.extreme": "Extreme",
   "option_impact.varies": "Varies",
+  "options.pages.general": "General",
+  "options.pages.quality": "Quality",
+  "options.pages.advanced": "Advanced",
   "options.names.view_distance": "View Distance",
   "options.tooltips.view_distance": "The view distance controls how far away terrain will be rendered. Lower distances mean that less terrain will be rendered, improving frame rates.",
   "options.names.brightness": "Brightness",
