Adding sodium namespace to all translations

--- a/src/main/resources/assets/sodium/lang/en_us.json
+++ b/src/main/resources/assets/sodium/lang/en_us.json
@@ -1,76 +1,76 @@
 {
-  "control_value_formatter.gui_scale_auto": "Auto",
-  "control_value_formatter.fps_limit_unlimited": "Unlimited",
-  "control_value_formatter.moody": "Moody",
-  "control_value_formatter.bright": "Bright",
-  "option_impact.low": "Low",
-  "option_impact.medium": "Medium",
-  "option_impact.high": "High",
-  "option_impact.extreme": "Extreme",
-  "option_impact.varies": "Varies",
-  "options.pages.general": "General",
-  "options.pages.quality": "Quality",
-  "options.pages.advanced": "Advanced",
-  "options.names.view_distance": "View Distance",
-  "options.tooltips.view_distance": "The view distance controls how far away terrain will be rendered. Lower distances mean that less terrain will be rendered, improving frame rates.",
-  "options.names.brightness": "Brightness",
-  "options.tooltips.brightness": "Controls the brightness (gamma) of the game.",
-  "options.names.clouds": "Clouds",
-  "options.tooltips.clouds": "Controls whether or not clouds will be visible.",
-  "options.names.fog": "Fog",
-  "options.tooltips.fog": "If enabled, a fog effect will be used for terrain in the distance. Disabling this option will not change fog effects used underwater or in the Nether.",
-  "options.names.gui_scale": "GUI Scale",
-  "options.tooltips.gui_scale": "Sets the maximum scale factor to be used for the user interface. If 'auto' is used, then the largest scale factor will always be used.",
-  "options.names.fullscreen": "Fullscreen",
-  "options.tooltips.fullscreen": "If enabled, the game will display in full-screen (if supported).",
-  "options.names.v_sync": "V-Sync",
-  "options.tooltips.v_sync": "If enabled, the game's frame rate will be synchronized to the monitor's refresh rate, making for a generally smoother experience at the expense of overall input latency. This setting might reduce performance if your system is too slow.",
-  "options.names.fps_limit": "FPS Limit",
-  "options.tooltips.fps_limit": "Limits the maximum number of frames per second. In effect, this will throttle the game and can be useful when you want to conserve battery life or multi-task between other applications. If V-Sync is enabled, this option will be ignored unless it is lower than your display's refresh rate.",
-  "options.names.view_bobbing": "View Bobbing",
-  "options.tooltips.view_bobbing": "If enabled, the player's view will sway and bob when moving around. Players who suffer from motion sickness can benefit from disabling this.",
-  "options.names.attack_indicator": "Attack Indicator",
-  "options.tooltips.attack_indicator": "Controls where the Attack Indicator is displayed on screen.",
-  "options.names.graphics_quality": "Graphics Quality",
-  "options.tooltips.graphics_quality": "The default graphics quality controls some legacy options and is necessary for mod compatibility. If the options below are left to \"Default\", they will use this setting.",
-  "options.names.clouds_quality": "Clouds Quality",
-  "options.tooltips.clouds_quality": "Controls the quality of rendered clouds in the sky.",
-  "options.names.weather_quality": "Weather Quality",
-  "options.tooltips.weather_quality": "Controls the quality of rain and snow effects.",
-  "options.names.particle_quality": "Particle Quality",
-  "options.tooltips.particle_quality": "Controls the maximum number of particles which can be present on screen at any one time.",
-  "options.names.smooth_lighting": "Smooth Lighting",
-  "options.tooltips.smooth_lighting": "Controls the quality of smooth lighting effects.\n\nOff - No smooth lighting\nLow - Smooth block lighting only\nHigh (new!) - Smooth block and entity lighting",
-  "options.names.biome_blend": "Biome Blend",
-  "options.tooltips.biome_blend": "Controls the range which biomes will be sampled for block colorization. Higher values greatly increase the amount of time it takes to build chunks for diminishing improvements in quality.",
-  "options.names.entity_distance": "Entity Distance",
-  "options.tooltips.entity_distance": "Controls how far away entities can render from the player. Higher values increase the render distance at the expense of frame rates.",
-  "options.names.entity_shadows": "Entity Shadows",
-  "options.tooltips.entity_shadows": "If enabled, basic shadows will be rendered beneath mobs and other entities.",
-  "options.names.vignette": "Vignette",
-  "options.tooltips.vignette": "If enabled, a vignette effect will be rendered on the player's view. This is very unlikely to make a difference to frame rates unless you are fill-rate limited.",
-  "options.names.mipmap_levels": "Mipmap Levels",
-  "options.tooltips.mipmap_levels": "Controls the number of mipmaps which will be used for block model textures. Higher values provide better rendering of blocks in the distance, but may adversely affect performance with many animated textures.",
-  "options.names.chunk_renderer": "Chunk Renderer",
-  "options.tooltips.chunk_renderer": "Modern versions of OpenGL provide features which can be used to greatly reduce driver overhead when rendering chunks. You should use the latest feature set allowed by Sodium for optimal performance. If you're experiencing chunk rendering issues or driver crashes, try using the older (and possibly more stable) feature sets.",
-  "options.names.use_chunk_face_culling": "Use Chunk Face Culling",
-  "options.tooltips.use_chunk_face_culling": "If enabled, an additional culling pass will be performed on the CPU to determine which planes of a chunk mesh are visible. This can eliminate a large number of block faces very early in the rendering process, saving memory bandwidth and time on the GPU.",
-  "options.names.use_compact_vertex_format": "Use Compact Vertex Format",
-  "options.tooltips.use_compace_vertex_format": "If enabled, a more compact vertex format will be used for chunk meshes which limits the precision of vertex attributes. This format will reduce graphics memory usage and bandwidth requirements by around 40%, but could cause z-fighting/flickering texture issues in some edge cases.",
-  "options.names.use_fog_occlusion": "Use Fog Occlusion",
-  "options.tooltips.use_fog_occlusion": "If enabled, chunks which are determined to be fully hidden by fog effects will be skipped during rendering. This will generally provide a modest improvement to the number of chunks rendered each frame, especially where fog effects are heavier (i.e. while underwater.)",
-  "options.names.use_entity_culling": "Use Entity Culling",
-  "options.tooltips.use_entity_culling": "If enabled, a secondary culling pass will be performed before attempting to render an entity. This additional pass takes into account the current set of visible chunks and removes entities which are not in any visible chunks.",
-  "options.names.use_particle_culling": "Use Particle Culling",
-  "options.tooltips.use_particle_culling": "If enabled, only particles which are determined to be visible will be rendered. This can provide a significant improvement to frame rates when many particles are nearby.",
-  "options.names.animate_only_visible_textures": "Animate Only Visible Textures",
-  "options.tooltips.animate_only_visible_textures": "If enabled, only animated textures determined to be visible will be updated. This can provide a significant boost to frame rates on some hardware. If you experience issues with some textures not being animated, disable this option.",
-  "options.names.use_memory_intrinsics": "Use Memory Intrinsics",
-  "options.tooltips.use_memory_intrinsics": "If enabled, special intrinsics will be used to speed up the copying of client memory in certain vertex-limited scenarios, such as particle and text rendering. This option only exists for debugging purposes and should be left enabled unless you know what you are doing.",
-  "options.names.disable_driver_blacklist": "Disable Driver Blacklist",
-  "options.tooltips.disable_driver_blacklist": "If selected, Sodium will ignore the built-in driver blacklist and enable options which are known to be broken with your system configuration. This might cause serious problems and should not be used unless you really do know better. The settings screen must be saved, closed, and re-opened after changing this option in order to reveal previously hidden options.",
-  "options.tooltips.performance_impact_string": "%sPerformance Impact: %s",
-  "options.buttons.undo": "Undo",
-  "options.buttons.apply": "Apply",
-  "options.buttons.close": "Close"
+  "sodium.control_value_formatter.gui_scale_auto": "Auto",
+  "sodium.control_value_formatter.fps_limit_unlimited": "Unlimited",
+  "sodium.control_value_formatter.moody": "Moody",
+  "sodium.control_value_formatter.bright": "Bright",
+  "sodium.option_impact.low": "Low",
+  "sodium.option_impact.medium": "Medium",
+  "sodium.option_impact.high": "High",
+  "sodium.option_impact.extreme": "Extreme",
+  "sodium.option_impact.varies": "Varies",
+  "sodium.options.pages.general": "General",
+  "sodium.options.pages.quality": "Quality",
+  "sodium.options.pages.advanced": "Advanced",
+  "sodium.options.names.view_distance": "View Distance",
+  "sodium.options.tooltips.view_distance": "The view distance controls how far away terrain will be rendered. Lower distances mean that less terrain will be rendered, improving frame rates.",
+  "sodium.options.names.brightness": "Brightness",
+  "sodium.options.tooltips.brightness": "Controls the brightness (gamma) of the game.",
+  "sodium.options.names.clouds": "Clouds",
+  "sodium.options.tooltips.clouds": "Controls whether or not clouds will be visible.",
+  "sodium.options.names.fog": "Fog",
+  "sodium.options.tooltips.fog": "If enabled, a fog effect will be used for terrain in the distance. Disabling this option will not change fog effects used underwater or in the Nether.",
+  "sodium.options.names.gui_scale": "GUI Scale",
+  "sodium.options.tooltips.gui_scale": "Sets the maximum scale factor to be used for the user interface. If 'auto' is used, then the largest scale factor will always be used.",
+  "sodium.options.names.fullscreen": "Fullscreen",
+  "sodium.options.tooltips.fullscreen": "If enabled, the game will display in full-screen (if supported).",
+  "sodium.options.names.v_sync": "V-Sync",
+  "sodium.options.tooltips.v_sync": "If enabled, the game's frame rate will be synchronized to the monitor's refresh rate, making for a generally smoother experience at the expense of overall input latency. This setting might reduce performance if your system is too slow.",
+  "sodium.options.names.fps_limit": "FPS Limit",
+  "sodium.options.tooltips.fps_limit": "Limits the maximum number of frames per second. In effect, this will throttle the game and can be useful when you want to conserve battery life or multi-task between other applications. If V-Sync is enabled, this option will be ignored unless it is lower than your display's refresh rate.",
+  "sodium.options.names.view_bobbing": "View Bobbing",
+  "sodium.options.tooltips.view_bobbing": "If enabled, the player's view will sway and bob when moving around. Players who suffer from motion sickness can benefit from disabling this.",
+  "sodium.options.names.attack_indicator": "Attack Indicator",
+  "sodium.options.tooltips.attack_indicator": "Controls where the Attack Indicator is displayed on screen.",
+  "sodium.options.names.graphics_quality": "Graphics Quality",
+  "sodium.options.tooltips.graphics_quality": "The default graphics quality controls some legacy options and is necessary for mod compatibility. If the options below are left to \"Default\", they will use this setting.",
+  "sodium.options.names.clouds_quality": "Clouds Quality",
+  "sodium.options.tooltips.clouds_quality": "Controls the quality of rendered clouds in the sky.",
+  "sodium.options.names.weather_quality": "Weather Quality",
+  "sodium.options.tooltips.weather_quality": "Controls the quality of rain and snow effects.",
+  "sodium.options.names.particle_quality": "Particle Quality",
+  "sodium.options.tooltips.particle_quality": "Controls the maximum number of particles which can be present on screen at any one time.",
+  "sodium.options.names.smooth_lighting": "Smooth Lighting",
+  "sodium.options.tooltips.smooth_lighting": "Controls the quality of smooth lighting effects.\n\nOff - No smooth lighting\nLow - Smooth block lighting only\nHigh (new!) - Smooth block and entity lighting",
+  "sodium.options.names.biome_blend": "Biome Blend",
+  "sodium.options.tooltips.biome_blend": "Controls the range which biomes will be sampled for block colorization. Higher values greatly increase the amount of time it takes to build chunks for diminishing improvements in quality.",
+  "sodium.options.names.entity_distance": "Entity Distance",
+  "sodium.options.tooltips.entity_distance": "Controls how far away entities can render from the player. Higher values increase the render distance at the expense of frame rates.",
+  "sodium.options.names.entity_shadows": "Entity Shadows",
+  "sodium.options.tooltips.entity_shadows": "If enabled, basic shadows will be rendered beneath mobs and other entities.",
+  "sodium.options.names.vignette": "Vignette",
+  "sodium.options.tooltips.vignette": "If enabled, a vignette effect will be rendered on the player's view. This is very unlikely to make a difference to frame rates unless you are fill-rate limited.",
+  "sodium.options.names.mipmap_levels": "Mipmap Levels",
+  "sodium.options.tooltips.mipmap_levels": "Controls the number of mipmaps which will be used for block model textures. Higher values provide better rendering of blocks in the distance, but may adversely affect performance with many animated textures.",
+  "sodium.options.names.chunk_renderer": "Chunk Renderer",
+  "sodium.options.tooltips.chunk_renderer": "Modern versions of OpenGL provide features which can be used to greatly reduce driver overhead when rendering chunks. You should use the latest feature set allowed by Sodium for optimal performance. If you're experiencing chunk rendering issues or driver crashes, try using the older (and possibly more stable) feature sets.",
+  "sodium.options.names.use_chunk_face_culling": "Use Chunk Face Culling",
+  "sodium.options.tooltips.use_chunk_face_culling": "If enabled, an additional culling pass will be performed on the CPU to determine which planes of a chunk mesh are visible. This can eliminate a large number of block faces very early in the rendering process, saving memory bandwidth and time on the GPU.",
+  "sodium.options.names.use_compact_vertex_format": "Use Compact Vertex Format",
+  "sodium.options.tooltips.use_compace_vertex_format": "If enabled, a more compact vertex format will be used for chunk meshes which limits the precision of vertex attributes. This format will reduce graphics memory usage and bandwidth requirements by around 40%, but could cause z-fighting/flickering texture issues in some edge cases.",
+  "sodium.options.names.use_fog_occlusion": "Use Fog Occlusion",
+  "sodium.options.tooltips.use_fog_occlusion": "If enabled, chunks which are determined to be fully hidden by fog effects will be skipped during rendering. This will generally provide a modest improvement to the number of chunks rendered each frame, especially where fog effects are heavier (i.e. while underwater.)",
+  "sodium.options.names.use_entity_culling": "Use Entity Culling",
+  "sodium.options.tooltips.use_entity_culling": "If enabled, a secondary culling pass will be performed before attempting to render an entity. This additional pass takes into account the current set of visible chunks and removes entities which are not in any visible chunks.",
+  "sodium.options.names.use_particle_culling": "Use Particle Culling",
+  "sodium.options.tooltips.use_particle_culling": "If enabled, only particles which are determined to be visible will be rendered. This can provide a significant improvement to frame rates when many particles are nearby.",
+  "sodium.options.names.animate_only_visible_textures": "Animate Only Visible Textures",
+  "sodium.options.tooltips.animate_only_visible_textures": "If enabled, only animated textures determined to be visible will be updated. This can provide a significant boost to frame rates on some hardware. If you experience issues with some textures not being animated, disable this option.",
+  "sodium.options.names.use_memory_intrinsics": "Use Memory Intrinsics",
+  "sodium.options.tooltips.use_memory_intrinsics": "If enabled, special intrinsics will be used to speed up the copying of client memory in certain vertex-limited scenarios, such as particle and text rendering. This option only exists for debugging purposes and should be left enabled unless you know what you are doing.",
+  "sodium.options.names.disable_driver_blacklist": "Disable Driver Blacklist",
+  "sodium.options.tooltips.disable_driver_blacklist": "If selected, Sodium will ignore the built-in driver blacklist and enable options which are known to be broken with your system configuration. This might cause serious problems and should not be used unless you really do know better. The settings screen must be saved, closed, and re-opened after changing this option in order to reveal previously hidden options.",
+  "sodium.options.tooltips.performance_impact_string": "%sPerformance Impact: %s",
+  "sodium.options.buttons.undo": "Undo",
+  "sodium.options.buttons.apply": "Apply",
+  "sodium.options.buttons.close": "Close"
 }
