--- a/src/main/resources/assets/sodium/lang/en_us.json
+++ b/src/main/resources/assets/sodium/lang/en_us.json
@@ -38,7 +38,7 @@
   "sodium.options.use_chunk_face_culling.name": "Use Chunk Face Culling",
   "sodium.options.use_chunk_face_culling.tooltip": "If enabled, an additional culling pass will be performed on the CPU to determine which planes of a chunk mesh are visible. This can eliminate a large number of block faces very early in the rendering process, saving memory bandwidth and time on the GPU.",
   "sodium.options.use_compact_vertex_format.name": "Use Compact Vertex Format",
-  "sodium.options.use_compace_vertex_format.tooltip": "If enabled, a more compact vertex format will be used for chunk meshes which limits the precision of vertex attributes. This format will reduce graphics memory usage and bandwidth requirements by around 40%, but could cause z-fighting/flickering texture issues in some edge cases.",
+  "sodium.options.use_compact_vertex_format.tooltip": "If enabled, a more compact vertex format will be used for chunk meshes which limits the precision of vertex attributes. This format will reduce graphics memory usage and bandwidth requirements by around 40%, but could cause z-fighting/flickering texture issues in some edge cases.",
   "sodium.options.use_fog_occlusion.name": "Use Fog Occlusion",
   "sodium.options.use_fog_occlusion.tooltip": "If enabled, chunks which are determined to be fully hidden by fog effects will be skipped during rendering. This will generally provide a modest improvement to the number of chunks rendered each frame, especially where fog effects are heavier (i.e. while underwater.)",
   "sodium.options.use_entity_culling.name": "Use Entity Culling",
@@ -51,7 +51,7 @@
   "sodium.options.use_memory_intrinsics.tooltip": "If enabled, special intrinsics will be used to speed up the copying of client memory in certain vertex-limited scenarios, such as particle and text rendering. This option only exists for debugging purposes and should be left enabled unless you know what you are doing.",
   "sodium.options.disable_driver_blacklist.name": "Disable Driver Blacklist",
   "sodium.options.disable_driver_blacklist.tooltip": "If selected, Sodium will ignore the built-in driver blacklist and enable options which are known to be broken with your system configuration. This might cause serious problems and should not be used unless you really do know better. The settings screen must be saved, closed, and re-opened after changing this option in order to reveal previously hidden options.",
-  "sodium.options.performance_impact_string": "%sPerformance Impact: %s",
+  "sodium.options.performance_impact_string": "Performance Impact: %s",
   "sodium.options.buttons.undo": "Undo",
   "sodium.options.buttons.apply": "Apply",
   "sodium.options.buttons.close": "Close"
