--- a/src/main/resources/assets/sodium/lang/en_us.json
+++ b/src/main/resources/assets/sodium/lang/en_us.json
@@ -8,6 +8,7 @@
   "sodium.options.pages.quality": "Quality",
   "sodium.options.pages.advanced": "Advanced",
   "sodium.options.view_distance.tooltip": "The render distance controls how far away terrain will be rendered. Lower distances mean that less terrain will be rendered, improving frame rates.",
+  "sodium.options.view_distance.unit": "Chunks",
   "sodium.options.brightness.tooltip": "Controls the brightness (gamma) of the game.",
   "sodium.options.clouds.tooltip": "Controls whether or not clouds will be visible.",
   "sodium.options.fog.name": "Fog",
@@ -19,15 +20,25 @@
   "sodium.options.fps_limit.tooltip": "Limits the maximum number of frames per second. In effect, this will throttle the game and can be useful when you want to conserve battery life or multi-task between other applications. If V-Sync is enabled, this option will be ignored unless it is lower than your display's refresh rate.",
   "sodium.options.view_bobbing.tooltip": "If enabled, the player's view will sway and bob when moving around. Players who suffer from motion sickness can benefit from disabling this.",
   "sodium.options.attack_indicator.tooltip": "Controls where the Attack Indicator is displayed on screen.",
+  "sodium.options.attack_indicator.off": "Off",
+  "sodium.options.attack_indicator.crosshair": "Crosshair",
+  "sodium.options.attack_indicator.hotbar": "Hotbar",
   "sodium.options.graphics_quality.tooltip": "The default graphics quality controls some legacy options and is necessary for mod compatibility. If the options below are left to \"Default\", they will use this setting.",
   "sodium.options.clouds_quality.name": "Clouds Quality",
   "sodium.options.clouds_quality.tooltip": "Controls the quality of rendered clouds in the sky.",
   "sodium.options.weather_quality.name": "Weather Quality",
   "sodium.options.weather_quality.tooltip": "Controls the quality of rain and snow effects.",
   "sodium.options.particle_quality.name": "Particle Quality",
+  "sodium.options.particle_quality.low": "Low",
+  "sodium.options.particle_quality.medium": "Medium",
+  "sodium.options.particle_quality.high": "High",
   "sodium.options.particle_quality.tooltip": "Controls the maximum number of particles which can be present on screen at any one time.",
   "sodium.options.smooth_lighting.tooltip": "Controls the quality of smooth lighting effects.\n\nOff - No smooth lighting\nLow - Smooth block lighting only\nHigh (new!) - Smooth block and entity lighting",
+  "sodium.options.smooth_lighting.high": "High",
+  "sodium.options.smooth_lighting.low": "Low",
+  "sodium.options.smooth_lighting.off": "Off",
   "sodium.options.biome_blend.tooltip": "Controls the range which biomes will be sampled for block colorization. Higher values greatly increase the amount of time it takes to build chunks for diminishing improvements in quality.",
+  "sodium.options.biome_blend.unit": "block(s)",
   "sodium.options.entity_distance.tooltip": "Controls how far away entities can render from the player. Higher values increase the render distance at the expense of frame rates.",
   "sodium.options.entity_shadows.tooltip": "If enabled, basic shadows will be rendered beneath mobs and other entities.",
   "sodium.options.vignette.name": "Vignette",
