fix: Resolve conflicts

--- a/src/main/resources/assets/sodium/lang/en_us.json
+++ b/src/main/resources/assets/sodium/lang/en_us.json
@@ -31,8 +31,10 @@
   "sodium.options.vignette.name": "Vignette",
   "sodium.options.vignette.tooltip": "If enabled, a vignette effect will be rendered on the player's view. This is very unlikely to make a difference to frame rates unless you are fill-rate limited.",
   "sodium.options.mipmap_levels.tooltip": "Controls the number of mipmaps which will be used for block model textures. Higher values provide better rendering of blocks in the distance, but may adversely affect performance with many animated textures.",
-  "sodium.options.chunk_renderer.name": "Chunk Renderer",
-  "sodium.options.chunk_renderer.tooltip": "Modern versions of OpenGL provide features which can be used to greatly reduce driver overhead when rendering chunks. You should use the latest feature set allowed by Sodium for optimal performance. If you're experiencing chunk rendering issues or driver crashes, try using the older (and possibly more stable) feature sets.",
+  "sodium.options.use_chunk_multi_draw.name": "Use Chunk Multi-Draw",
+  "sodium.options.use_chunk_multi_draw.tooltip": "Allows for many chunks to be rendered together in larger draw call batches.",
+  "sodium.options.use_vertex_arrays.name": "Use Vertex Arrays",
+  "sodium.options.use_vertex_arrays.tooltip": "Minimizes CPU overhead when switching between different kinds of render tasks.",
   "sodium.options.use_chunk_face_culling.name": "Use Chunk Face Culling",
   "sodium.options.use_chunk_face_culling.tooltip": "If enabled, an additional culling pass will be performed on the CPU to determine which planes of a chunk mesh are visible. This can eliminate a large number of block faces very early in the rendering process, saving memory bandwidth and time on the GPU.",
   "sodium.options.use_compact_vertex_format.name": "Use Compact Vertex Format",
