--- a/src/main/resources/assets/sodium/lang/en_us.json
+++ b/src/main/resources/assets/sodium/lang/en_us.json
@@ -4,7 +4,6 @@
   "sodium.option_impact.high": "High",
   "sodium.option_impact.extreme": "Extreme",
   "sodium.option_impact.varies": "Varies",
-  "sodium.options.pages.general": "General",
   "sodium.options.pages.quality": "Quality",
   "sodium.options.pages.advanced": "Advanced",
   "sodium.options.view_distance.tooltip": "The render distance controls how far away terrain will be rendered. Lower distances mean that less terrain will be rendered, improving frame rates.",
@@ -12,19 +11,16 @@
   "sodium.options.clouds.tooltip": "Controls whether or not clouds will be visible.",
   "sodium.options.gui_scale.tooltip": "Sets the maximum scale factor to be used for the user interface. If 'auto' is used, then the largest scale factor will always be used.",
   "sodium.options.fullscreen.tooltip": "If enabled, the game will display in full-screen (if supported).",
-  "sodium.options.v_sync.name": "V-Sync",
   "sodium.options.v_sync.tooltip": "If enabled, the game's frame rate will be synchronized to the monitor's refresh rate, making for a generally smoother experience at the expense of overall input latency. This setting might reduce performance if your system is too slow.",
   "sodium.options.fps_limit.tooltip": "Limits the maximum number of frames per second. This can help reduce battery usage and general system load when multi-tasking. If V-Sync is enabled, this option will be ignored unless it is lower than your display's refresh rate.",
   "sodium.options.view_bobbing.tooltip": "If enabled, the player's view will sway and bob when moving around. Players who experience motion sickness while playing can benefit from disabling this.",
   "sodium.options.attack_indicator.tooltip": "Controls where the Attack Indicator is displayed on screen.",
   "sodium.options.graphics_quality.tooltip": "The default graphics quality controls some legacy options and is necessary for mod compatibility. If the options below are left to \"Default\", they will use this setting.",
-  "sodium.options.clouds_quality.name": "Clouds Quality",
   "sodium.options.clouds_quality.tooltip": "Controls the quality of rendered clouds in the sky.",
-  "sodium.options.weather_quality.name": "Weather Quality",
   "sodium.options.weather_quality.tooltip": "Controls the quality of rain and snow effects.",
-  "sodium.options.particle_quality.name": "Particle Quality",
   "sodium.options.particle_quality.tooltip": "Controls the maximum number of particles which can be present on screen at any one time.",
   "sodium.options.smooth_lighting.tooltip": "Controls whether blocks will be smoothly lit and shaded. This slightly increases the amount of time needed to re-build a chunk, but doesn't affect frame rates.",
+  "sodium.options.biome_blend.value": "%s block(s)",
   "sodium.options.biome_blend.tooltip": "Controls the range which biomes will be sampled for block colorization. Higher values greatly increase the amount of time it takes to build chunks for diminishing improvements in quality.",
   "sodium.options.entity_distance.tooltip": "Controls how far away entities can render from the player. Higher values increase the render distance at the expense of frame rates.",
   "sodium.options.entity_shadows.tooltip": "If enabled, basic shadows will be rendered beneath mobs and other entities.",
@@ -48,6 +44,5 @@
   "sodium.options.performance_impact_string": "Performance Impact: %s",
   "sodium.options.buttons.undo": "Undo",
   "sodium.options.buttons.apply": "Apply",
-  "sodium.options.buttons.close": "Close",
   "sodium.options.buttons.donate": "Buy us a coffee!"
 }
